package MonaOctocat;

public class Dinotocat extends Octocat{
    Dinotocat(int id, String Nombre, String Descripcion,String Url){
        super(id, Nombre, Descripcion, Url);
    }

    @Override
    void display() {
        super.display();
    }
}
