package MonaOctocat;

public class Filmtocats extends Octocat{
    Filmtocats(int id, String Nombre, String Descripcion,String Url){
        super(id, Nombre, Descripcion, Url);
    }
    @Override
    void display() {
        super.display();
    }
}
