package MonaOctocat;

public class Sentrytocat extends Octocat{
    Sentrytocat(int id, String Nombre, String Descripcion,String Url){
        super(id, Nombre, Descripcion, Url);
    }
    @Override
    void display() {
        super.display();
    }
}
