package MonaOctocat;

public class Surftocat extends Octocat{
    Surftocat(int id, String Nombre, String Descripcion,String Url){
        super(id, Nombre, Descripcion,Url);
    }
    @Override
    void display() {
        super.display();
    }
}
