@startuml

title __MONAOCTOCAT's Class Diagram__\n

  namespace MonaOctocat {
    class MonaOctocat.Dinotocat {
        ~ Dinotocat()
        ~ display()
    }
  }
  

  namespace MonaOctocat {
    class MonaOctocat.Filmtocats {
        ~ Filmtocats()
        ~ display()
    }
  }
  

  namespace MonaOctocat {
    class MonaOctocat.Justicetocat {
        ~ Justicetocat()
        ~ display()
    }
  }
  

  namespace MonaOctocat {
    class MonaOctocat.Manufactutocat {
        ~ Manufactutocat()
        ~ display()
    }
  }
  

  namespace MonaOctocat {
    class MonaOctocat.Octocat {
        ~ Descripcion : String
        ~ Nombre : String
        ~ Url : String
        ~ id : int
        + Octocat()
        ~ display()
    }
  }
  

  namespace MonaOctocat {
    class MonaOctocat.PruevaOctocat {
        {static} + main()
    }
  }
  

  namespace MonaOctocat {
    class MonaOctocat.Sentrytocat {
        ~ Sentrytocat()
        ~ display()
    }
  }
  

  namespace MonaOctocat {
    class MonaOctocat.Skatetocat {
        ~ Skatetocat()
        ~ display()
    }
  }
  

  namespace MonaOctocat {
    class MonaOctocat.Surftocat {
        ~ Surftocat()
        ~ display()
    }
  }
  

  MonaOctocat.Dinotocat -up-|> MonaOctocat.Octocat
  MonaOctocat.Filmtocats -up-|> MonaOctocat.Octocat
  MonaOctocat.Justicetocat -up-|> MonaOctocat.Octocat
  MonaOctocat.Manufactutocat -up-|> MonaOctocat.Octocat
  MonaOctocat.Sentrytocat -up-|> MonaOctocat.Octocat
  MonaOctocat.Skatetocat -up-|> MonaOctocat.Octocat
  MonaOctocat.Surftocat -up-|> MonaOctocat.Octocat


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
